      (AZAWAWI)
    - "Directory Browser" stability fixes (AZAWAWI)
    - Refactored "Help Search" to use document help providers. This will make it
      faster (AZAWAWI)
    - Help Search looks up words selected or under the cursor (AZAWAWI)
    - allow the use of $main->open_file_dialog($dir) (SZABGAB)
    - Moved Ecliptic's Quick Fix to Padre core under the Edit menu (AZAWAWI)

0.43 2009.08.16
    - Revised nice splash screen slightly. Move original artwork
      to Padre-Artwork (BRAMBLE)
    - Added a (hopefully) nice splash screen for Padre (GARU)
    - Added a Padre::Perl API for discovering the location of the system
      Perl in a way smart enough to handle people that specifically need a
      command line Perl, or specifically need a windowing Perl (ADAMK)
    - Temporarily remove PAR support (ADAMK)
    - Upgrade the plugin internals to support arbitrary class names,
      simplifying the implementation and clearing the way for
      Acme::Padre::Plugin::* modules. (ADAMK)
    - Updated PPI dependencies. Padre now supports 5.10 syntax in PPI-based
      features (ADAMK)
    - Find dialog now uses the Padre::Search API. (ADAMK)
    - New multiple-tabbed About box (ADAMK)
    - F3 with sub-line selected text converts it directly into an active
      search without needing to invoke the Find dialog (ADAMK)
    - Moved Perl 6 Help dialog to Padre core as "Help/Help Search" (AZAWAWI)
    - Help/Help Search now supports Perl 5 (AZAWAWI)
    - Moved Ecliptic's Open Resource to Padre core as "Search/Open Resource" 
      (AZAWAWI)
    - Moved Ecliptic's Quick Menu Access to Padre core as "Search/Quick Menu 
      Access" (AZAWAWI)
    - Fixed run command in a separate window bug on win32 (AZAWAWI)
    - Moved Ecliptic's "Open in file browser" to Padre core as "File/Open in 
      File Browser" and integrated it with Directory browser (AZAWAWI)
    - Moved functionality in Perl 5 plugin to Plugins -> Module Tools (ADAMK)